# learnflow-ai

./: .dockerignore  .env.local.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.artifacts-service  Dockerfile.bot  Dockerfile.prompt-config-service  INSTALL.md  Makefile  README.md  README_EN.md  docker-compose.yaml  env.example  feature-uv-migration-implementation-plan.md  init-db.sql  local-dev.sh  local-logs.sh  local-reset.sh  main.ipynb  project_documentation.md  pyproject.toml  run.sh
.claude/agents/: exp-entire-codebase-code-reviewer.md  exp-implementation-plan-code-reviewer.md  implementation-plan-architector.md
_experiments/notebooks/: learnflow_edit_agent.ipynb
_experiments/recognition/: normal_recognition.py  structured_recognition.py  utils.py
_experiments/synthesize/: main.py  run.py  run_synthesis.sh
artifacts-service/: Dockerfile  README.md  __init__.py  auth.py  main.py  models.py  pyproject.toml  settings.py  storage.py
artifacts-service/alembic/: env.py
artifacts-service/app/: __init__.py  __main__.py  exceptions.py  main.py  models.py  storage.py
artifacts-service/data/artifacts/test123/: metadata.json
artifacts-service/data/artifacts/test123/sessions/session-001/: gap_questions.md  generated_material.md  session_metadata.json
artifacts-service/data/artifacts/test123/sessions/session-002/: session_metadata.json  synthesized_material.md
artifacts-service/data/artifacts/user456/: metadata.json
artifacts-service/data/artifacts/user456/sessions/exam-crypto-01/: recognized_notes.md  session_metadata.json
artifacts-service/services/export/: base.py  markdown_export.py  pdf_export.py  zip_export.py
artifacts-service/services/export/templates/: styles.css
bot/: __init__.py  __main__.py  database.py  main.py  pyproject.toml  settings.py
bot/handlers/: auth_handlers.py  export_handlers.py  hitl_settings.py  prompt_config.py
bot/keyboards/: export_keyboards.py  hitl_keyboards.py  prompt_keyboards.py
bot/models/: prompt_config.py
bot/services/: api_client.py  artifacts_client.py  prompt_config_client.py
bot/states/: prompt_config.py
config/: graph.yaml
configs/: graph.yaml  prompts.yaml  providers.yaml
data/outputs/: content_979557959.md  question_01.md  synthesized_material.md
docs/: README.md  TESTING_STRATEGY.md  business_model.md  changelog.md  conventions.md  insights.md  overview.md  quick_start.md  ui_style_guide.md  uv_dependency_management.md
docs/ADR/: 001-architecture-overview.md  002-llm-guardrails.md  003-source-available-license.md  ADR-004-prompt-caching-strategy.md
docs/architecture/: NFR.md  c4-container-diagram.md  image-processing-flow.md  multi-provider-llm-support.md
docs/backlog/: README.md  index.md
docs/explorations/: MULTI_TENANCY_ANALYSIS.md  (+1 more)
docs/ideas/: UI.md  (+2 more)
documentation/: roadmap.md
learnflow/: __init__.py  __main__.py  artifacts_manager.py  config_manager.py  config_models.py  file_utils.py  github.py  graph.py  graph_manager.py  main.py  model_factory.py  prompts.py  pyproject.toml  settings.py  state.py  utils.py
prompt-config-service/: __init__.py  __main__.py  alembic.ini  config.py  database.py  initial_data.yaml  main.py  pyproject.toml
recognition/: normal_recognition.py  structured_recognition.py  utils.py
scripts/: local-dev.sh  local-reset.sh  test_ui_migration.py
synthesize/: main.py  run.py
web-ui/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+194 files in other folders)
