[project]
name = "learnflow-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Bbar0n234",email = "vilnus1337@mail.ru"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.bot.dependencies]
aiogram = "^3.20.0.post0"
telegramify-markdown = "^0.5.1"
pydantic-settings = "^2.10.1"


[tool.poetry.group.learnflow.dependencies]
langgraph = "^0.4.8"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
jinja2 = "^3.1.6"
langchain-openai = "^0.3.22"
pydantic-settings = "^2.9.1"
langgraph-checkpoint-postgres = "^2.0.21"
httpx = "^0.28.1"
langchain = "^0.3.27"
langfuse = "2.60.0"
python-multipart = "^0.0.20"
pillow = "^11.3.0"

