[project]
name = "artifacts-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bbar0n234", email = "vilnus1337@mail.ru" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]>=0.35.0",
]


[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
