[project]
name = "artifacts-service"
version = "0.1.0"
description = "Artifacts service for LearnFlow AI"
authors = [
    { name = "Bbar0n234", email = "vilnus1337@mail.ru" }
]
license = {text = "Apache 2.0"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]>=0.35.0",
    "markdown>=3.5",
    "weasyprint>=60.0",
    "aiofiles>=23.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "ruff>=0.12.7",
]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
