[project]
name = "learnflow-bot"
version = "0.1.0"
description = "Telegram bot for LearnFlow AI"
authors = [
    {name = "Bbar0n234", email = "vilnus1337@mail.ru"}
]
license = {text = "Apache 2.0"}
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.21.0",
    "pydantic-settings>=2.10.1",
    "telegramify-markdown>=0.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "ruff>=0.12.7",
]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
